--- a/assets/css/_page/_home.scss
+++ b/assets/css/_page/_home.scss
@@ -72,9 +72,9 @@
     padding-top: 2rem;
   }
 
-  .home-avatar img {
-    width: 6rem;
-  }
+  // .home-avatar img {
+  //   width: 6rem;
+  // }
 
   .summary {
     padding-top: 1rem;
